Update global styles in globals.css for improved font responsiveness. Adjust media query breakpoint in HeroSection for better layout on larger screens. Wrap AvatarsSVG in a div with minimum height in QuestionSections to ensure consistent spacing.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -232,7 +232,7 @@
 .hoves-h5-med {
   font-family: var(--font-tt-hoves), system-ui, sans-serif !important;
   font-weight: 400;
-  font-size: clamp(1rem, 2.5vw, 3.5rem);
+  font-size: clamp(1rem, 2vw, 2.5rem);
   /* line-height: 2.5rem; */
   letter-spacing: -0.03em;
 }
@@ -343,7 +343,7 @@
 
 /* TEXT_MOBILE */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .hoves-h1-med {
     font-family: var(--font-tt-hoves), system-ui, sans-serif !important;
     font-weight: 300;
